--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^3.0.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
@@ -41,10 +41,12 @@
     "get-intrinsic": "^1.2.1",
     "has": "^1.0.3",
     "has-symbols": "^1.0.3",
+    "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.6.3",
     "inherits": "^2.0.4",
     "ipaddr.js": "^2.1.0",
+    "jsonwebtoken": "^9.0.1",
     "media-typer": "^1.1.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -63,6 +65,7 @@
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "path-to-regexp": "^6.2.1",
     "proxy-addr": "^2.0.7",
     "qs": "^6.11.2",
