--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "^4.3.4",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.3.1",
     "ee-first": "^1.1.1",
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
@@ -54,7 +55,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.3.3",
     "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.7.1",
     "ms": "^2.1.3",
