--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "ms": "^2.1.3",
     "negotiator": "^0.6.3",
+    "nodemailer": "^6.9.3",
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
@@ -82,9 +83,11 @@
     "src": "^1.0.0",
     "statuses": "^2.0.1",
     "toidentifier": "^1.0.1",
+    "twilio": "^4.14.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^9.0.0",
     "vary": "^1.1.2"
   }
 }
