--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
     "connect-mongo": "^5.0.0",
+    "connect-mongodb-session": "^3.1.1",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.2.1",
     "debug": "^4.3.4",
     "depd": "^2.0.0",
