--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set NODE_ENV=production&& node src/app.js",
     "dev": "set NODE_ENV=development&& node src/app.js",
-    "debug": "node --inspect-brk app.js"
+    "debug": "node --inspect-brk src/app.js"
   },
   "keywords": [],
   "author": "",
