--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set NODE_ENV=production&& node src/app.js",
-    "dev": "set NODE_ENV=development&& node src/app.js",
+    "start:production": "set NODE_ENV=production&& node src/app.js",
+    "start:development": "set NODE_ENV=development&& node src/app.js",
     "debug": "node --inspect-brk src/app.js"
   },
   "keywords": [],
